--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.svg" type="image/svg+xml" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon-32x32.svg" type="image/svg+xml" sizes="32x32" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#E91E63" />
     <meta
       name="description"
       content="COSMO RLT Statistics Dashboard"
